--- a/model_saver.ipynb
+++ b/model_saver.ipynb
@@ -31,13 +31,23 @@
     "\n",
     "input_shape = (256, 256, 7)\n",
     "\n",
-    "def create_unetp():\n",
+    "def create_unet():\n",
     "    inputs = Input(input_shape)\n",
-    "    sides = u2net_block(inputs)\n",
+    "    sides = u2net_block(\n",
+    "        inputs,\n",
+    "#         rsu_mid_ch = 16,\n",
+    "#         rsu_out_ch = 64,\n",
+    "        inter_enc_dropout = 0.0,\n",
+    "        inter_dec_dropout = 0.0,\n",
+    "        enc_intra_enc_dropout = 0.0,\n",
+    "        enc_intra_dec_dropout = 0.0,\n",
+    "        dec_intra_enc_dropout = 0.0,\n",
+    "        dec_intra_dec_dropout = 0.0,\n",
+    "    )\n",
     "    model = Model(inputs=[inputs], outputs=[sides[0]])\n",
     "    return model\n",
     "\n",
-    "model = create_unetp()"
+    "model = create_unet()"
    ]
   },
   {
@@ -46,8 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.keras.optimizers import Adam, SGD\n",
-    "from keras_unet.metrics import iou, iou_thresholded\n",
+    "from tensorflow.keras.optimizers import Adam\n",
     "\n",
     "model.compile(\n",
     "    optimizer=Adam(learning_rate=0.001),\n",
@@ -64,7 +73,7 @@
    },
    "outputs": [],
    "source": [
-    "model.load_weights('model_trainchpt_e183.h5')"
+    "model.load_weights('model_trainchpt.h5')"
    ]
   },
   {
