--- a/modeltrain.ipynb
+++ b/modeltrain.ipynb
@@ -26,7 +26,22 @@
     "\n",
     "import tensorflow as tf\n",
     "import tensorflow.keras as keras\n",
+    "import tensorflow_addons as tfa\n",
     "from tensorflow.keras.callbacks import ModelCheckpoint\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set mixed precision\n",
+    "\n",
+    "# from tensorflow.keras.mixed_precision import experimental as mixed_precision\n",
+    "\n",
+    "# policy = mixed_precision.Policy('mixed_float16')\n",
+    "# mixed_precision.set_policy(policy)"
    ]
   },
   {
@@ -47,8 +62,9 @@
    },
    "outputs": [],
    "source": [
-    "DATA_DIR = Path(\"./data/tiles/ls8\")\n",
-    "BATCH_SIZE = 2\n",
+    "# DATA_DIR = Path(\"./data/tiles/ls8\")\n",
+    "DATA_DIR = Path(\"/tmp/ls8\")\n",
+    "BATCH_SIZE = 8\n",
     "\n",
     "NETWORK_HEADS = 7\n",
     "\n",
@@ -303,13 +319,27 @@
     "from tensorflow.keras.layers import Input\n",
     "from tensorflow.keras.models import Model\n",
     "\n",
-    "def create_unetp():\n",
+    "def create_unet():\n",
     "    inputs = Input(input_shape)\n",
-    "    sides = u2net_block(inputs)\n",
+    "    sides = u2net_block(\n",
+    "        inputs,\n",
+    "        inter_enc_dropout = 0.0,\n",
+    "        inter_dec_dropout = 0.0,\n",
+    "        enc_intra_enc_dropout = 0.0,\n",
+    "        enc_intra_dec_dropout = 0.0,\n",
+    "        dec_intra_enc_dropout = 0.0,\n",
+    "        dec_intra_dec_dropout = 0.0,\n",
+    "    )\n",
     "    model = Model(inputs=[inputs], outputs=sides)\n",
     "    return model\n",
     "\n",
-    "model = create_unetp()"
+    "def create_unetp():\n",
+    "    inputs = Input(input_shape)\n",
+    "    sides = u2netp_block(inputs)\n",
+    "    model = Model(inputs=[inputs], outputs=sides)\n",
+    "    return model\n",
+    "\n",
+    "model = create_unet()"
    ]
   },
   {
@@ -403,77 +433,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# https://github.com/ailias/Focal-Loss-implement-on-Tensorflow/blob/master/focal_loss.py\n",
-    "\n",
-    "from tensorflow.python.ops import array_ops\n",
-    "\n",
-    "def focal_loss(prediction_tensor, target_tensor, weights=None, alpha=0.25, gamma=2):\n",
-    "    r\"\"\"Compute focal loss for predictions.\n",
-    "        Multi-labels Focal loss formula:\n",
-    "            FL = -alpha * (z-p)^gamma * log(p) -(1-alpha) * p^gamma * log(1-p)\n",
-    "                 ,which alpha = 0.25, gamma = 2, p = sigmoid(x), z = target_tensor.\n",
-    "    Args:\n",
-    "     prediction_tensor: A float tensor of shape [batch_size, num_anchors,\n",
-    "        num_classes] representing the predicted logits for each class\n",
-    "     target_tensor: A float tensor of shape [batch_size, num_anchors,\n",
-    "        num_classes] representing one-hot encoded classification targets\n",
-    "     weights: A float tensor of shape [batch_size, num_anchors]\n",
-    "     alpha: A scalar tensor for focal loss alpha hyper-parameter\n",
-    "     gamma: A scalar tensor for focal loss gamma hyper-parameter\n",
-    "    Returns:\n",
-    "        loss: A (scalar) tensor representing the value of the loss function\n",
-    "    \"\"\"\n",
-    "    sigmoid_p = tf.nn.sigmoid(prediction_tensor)\n",
-    "    zeros = array_ops.zeros_like(sigmoid_p, dtype=sigmoid_p.dtype)\n",
-    "    \n",
-    "    # For poitive prediction, only need consider front part loss, back part is 0;\n",
-    "    # target_tensor > zeros <=> z=1, so poitive coefficient = z - p.\n",
-    "    pos_p_sub = array_ops.where(target_tensor > zeros, target_tensor - sigmoid_p, zeros)\n",
-    "    \n",
-    "    # For negative prediction, only need consider back part loss, front part is 0;\n",
-    "    # target_tensor > zeros <=> z=1, so negative coefficient = 0.\n",
-    "    neg_p_sub = array_ops.where(target_tensor > zeros, zeros, sigmoid_p)\n",
-    "    per_entry_cross_ent = - alpha * (pos_p_sub ** gamma) * tf.math.log(tf.clip_by_value(sigmoid_p, 1e-8, 1.0)) \\\n",
-    "                          - (1 - alpha) * (neg_p_sub ** gamma) * tf.math.log(tf.clip_by_value(1.0 - sigmoid_p, 1e-8, 1.0))\n",
-    "    return tf.reduce_sum(per_entry_cross_ent)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from tensorflow.keras.optimizers import Adam, SGD\n",
+    "from tensorflow.keras.optimizers.schedules import PiecewiseConstantDecay\n",
     "from keras_unet.metrics import iou, iou_thresholded\n",
     "from keras_unet.losses import jaccard_distance\n",
+    "from AdaBelief_tf import AdaBeliefOptimizer\n",
     "\n",
-    "def closs(y_true, y_pred):\n",
-    "    return 2 * jaccard_distance(y_true, y_pred) + tf.keras.losses.binary_crossentropy(y_true, y_pred)\n",
+    "STEPS_PER_EPOCH = train_len // BATCH_SIZE\n",
+    "\n",
+    "adabelief = AdaBeliefOptimizer(learning_rate=0.0001)\n",
+    "ranger = tfa.optimizers.Lookahead(adabelief, sync_period=6, slow_step_size=0.5)\n",
     "\n",
     "model.compile(\n",
-    "    optimizer=Adam(learning_rate=0.001),\n",
-    "#     optimizer=Adam(learning_rate=0.0001),\n",
-    "#     optimizer=\"adam\",\n",
-    "    #optimizer=SGD(lr=0.01, momentum=0.99),\n",
+    "#     optimizer=Adam(learning_rate=0.001),\n",
+    "    optimizer=AdaBeliefOptimizer(learning_rate=0.001, total_steps=300 * STEPS_PER_EPOCH, warmup_proportion=0.03, min_lr=1e-5),\n",
+    "#     optimizer=adabelief,\n",
     "    loss=NETWORK_HEADS * ['binary_crossentropy'],\n",
-    "#     loss='binary_crossentropy',\n",
-    "#     loss=jaccard_distance,\n",
-    "#     loss=focal_loss,\n",
-    "#     loss=closs,\n",
     "    metrics=[iou, iou_thresholded],\n",
     ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# model.load_weights(model_filename)\n",
-    "# model.load_weights('model_trainafter_ndsi_unet.h5')\n",
-    "# model.load_weights('bcdu_net_d3_20201002_2.h5')"
    ]
   },
   {
@@ -486,8 +463,9 @@
    "source": [
     "history = model.fit(\n",
     "    train_gen,\n",
-    "    steps_per_epoch=train_len // BATCH_SIZE,\n",
-    "    epochs=200,\n",
+    "    steps_per_epoch=STEPS_PER_EPOCH,\n",
+    "#     initial_epoch=220,\n",
+    "    epochs=300,\n",
     "    validation_data=(x_val_tf, y_val_tf),\n",
     "    validation_batch_size=BATCH_SIZE,\n",
     "    callbacks=[callback_checkpoint, tensorboard_callback]\n",
@@ -522,7 +500,7 @@
    "source": [
     "# model.load_weights(model_filename)\n",
     "# model.save('model.h5')\n",
-    "model.load_weights('model_trainchpt_e183.h5')"
+    "model.load_weights('model_trainchpt.h5')"
    ]
   },
   {
